[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sprites/ship.png" type="Texture" id=1]
[ext_resource path="res://actors/Ship.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/shield.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/shield-energy.png" type="Texture" id=4]
[ext_resource path="res://actors/Shield.gd" type="Script" id=5]
[ext_resource path="res://components/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://actors/shieldstates/ShieldFull.gd" type="Script" id=7]
[ext_resource path="res://actors/shieldstates/ShieldActive.gd" type="Script" id=8]
[ext_resource path="res://actors/shieldstates/ShieldInactive.gd" type="Script" id=9]
[ext_resource path="res://actors/shieldstates/ShieldDepleted.gd" type="Script" id=10]
[ext_resource path="res://assets/sound/zap.wav" type="AudioStream" id=11]
[ext_resource path="res://actors/items/blaster.tscn" type="PackedScene" id=12]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.485637 ), 0.0, 1.40166, 0, 0, Vector2( 1, 0.332484 ), -1.00331, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.00860585, 0.373494, 0.991394 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.947472, 0.417625, 1, 1, 0.909804, 0, 1, 0.403922, 0.00392157, 0.00392157, 0.898039 )

[sub_resource type="CircleShape2D" id=6]
radius = 24.0

[sub_resource type="Animation" id=7]
resource_name = "flash"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/ShieldSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "flashing"
length = 0.504
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.1 ]
}

[node name="Ship" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource( 2 )
color = Color( 0.972549, 0.364706, 0.364706, 1 )
Weapon = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 13, 0, -12, 12, -9, 0, -12, -12 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( -17, 0 )
rotation = -1.5708
emitting = false
amount = 10
lifetime = 2.0
speed_scale = 13.33
emission_shape = 1
emission_sphere_radius = 2.49
gravity = Vector2( 0, -9.8 )
scale_amount = 10.66
scale_amount_random = 0.66
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 4 )

[node name="ShieldCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="Shield" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Node2D" type="Node2D" parent="Shield"]

[node name="ShieldSprite" type="Sprite" parent="Shield/Node2D"]
visible = false
texture = ExtResource( 3 )

[node name="ShieldEnergyMeter" type="TextureProgress" parent="Shield/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 5
tint_progress = Color( 0.278431, 1, 1, 0.243137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldAnimation" type="AnimationPlayer" parent="Shield"]
playback_speed = 3.0
anims/flash = SubResource( 7 )

[node name="ShieldStateMachine" type="Node" parent="Shield"]
script = ExtResource( 6 )

[node name="ShieldFull" type="Node" parent="Shield/ShieldStateMachine"]
script = ExtResource( 7 )

[node name="ShieldActive" type="Node" parent="Shield/ShieldStateMachine"]
script = ExtResource( 8 )

[node name="ShieldInactive" type="Node" parent="Shield/ShieldStateMachine"]
script = ExtResource( 9 )
meter_color = Color( 0.356863, 0.356863, 0.878431, 1 )

[node name="ShieldDepleted" type="Node" parent="Shield/ShieldStateMachine"]
script = ExtResource( 10 )

[node name="ZapAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SfxMaster"

[node name="ShipAnimation" type="AnimationPlayer" parent="."]
anims/flashing = SubResource( 8 )
